src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Allow_customer_to_present_concerns__c</fullName>
        <label>Allow customer to present concerns</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Built_Rapport__c</fullName>
        <label>Built Rapport</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_advised_what_will_happen_next__c</fullName>
        <inlineHelpText>eg: when they will next talk or what work will be done</inlineHelpText>
        <label>CM advised what will happen next</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Duration_converted__c</fullName>
        <formula>IF(ISNULL(CallDurationInSeconds), 
&apos;&apos;,
TEXT(FLOOR(CallDurationInSeconds/3600)) + &quot;:&quot; + TEXT( FLOOR(MOD(CallDurationInSeconds,3600)/60)) + &quot;:&quot; +   TEXT(MOD(MOD(CallDurationInSeconds,3600),60)))</formula>
        <label>Call Duration(Converted)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Monitored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Monitored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Outcome_Result__c</fullName>
        <description>Please use this drop down to categorise the outcome of your call</description>
        <inlineHelpText>Please use this drop down to categorise the outcome of your call</inlineHelpText>
        <label>Call Outcome Result</label>
        <picklist>
            <picklistValues>
                <fullName>Connected - Meeting Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected - No Further Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected - Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communication_is_clear_positive_confiden__c</fullName>
        <label>Communication&apos;s clear,positive,confident</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <formula>CASE( MOD( ActivityDate - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demonstrate_active_listening__c</fullName>
        <label>Demonstrate active listening</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Received_Date_Business_Hour__c</fullName>
        <label>Email Received Date(Business Hour)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Received_Date__c</fullName>
        <label>Email Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Response_Time__c</fullName>
        <formula>ROUND(8*(
(5*FLOOR((DATEVALUE(CreatedDate)-DATE(1996,01,01))/7) +
MIN(5, 
    MOD(DATEVALUE(CreatedDate)-DATE(1996,01,01), 7) +
    MIN(1, 24/8*(MOD(CreatedDate -DATETIMEVALUE(&apos;1996-01-01 22:00:00&apos;), 1)))
))
-
(5*FLOOR((DATEVALUE(Email_Received_Date_Business_Hour__c)-DATE(1996,01,01))/7) +
MIN(5, 
    MOD(DATEVALUE(Email_Received_Date_Business_Hour__c)-DATE(1996,01,01), 7) +
    MIN(1, 24/8*(MOD(Email_Received_Date_Business_Hour__c-DATETIMEVALUE(&apos;1996-01-01 22:00:00&apos;), 1)))
))
), 2)</formula>
        <label>Email Response Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gave_correct_answers_and_infomations__c</fullName>
        <label>Gave correct answers and infomations</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mirrors_clients_talking_behaviour__c</fullName>
        <label>Mirrors clients talking behaviour</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitored_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monitored By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitored_Date__c</fullName>
        <label>Monitored Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ACD__c</fullName>
        <description>The name of the ACD the call was delivered from</description>
        <label>ACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
        <description>The time in Contact World that the call ended</description>
        <label>CW Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_Start_Time__c</fullName>
        <description>The time shown in Contact World when the call first hit your call plan</description>
        <label>CW Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallRingTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time between the agent&apos;s phone ringing and the agent answering the call. For Outbound, this is the time between the customer&apos;s phone ringing and the customer answering the call. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Ring Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallTalkTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time the customer spent connected to an agent. For Outbound, this is the time between the customer answering their phone and the call ending. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Talk Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
        <description>The contact world number relating to this call.  In the case of an inbound call this would be the number dialled by the caller.  For an outbound call this would be the number presented to the person being called.</description>
        <label>ContactWorld Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Customer_Number__c</fullName>
        <description>The customer number.  In the case of an inbound call this will be the calling line id.  For an outbound this will be the number that the agnet has called.</description>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__InteractionQuality__c</fullName>
        <label>Interaction Quality</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Service_Name__c</fullName>
        <description>The service name that the call came from</description>
        <label>Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Was_Call_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Was Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TL_Notes__c</fullName>
        <label>TL Notes</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>My_Calls_This_Week</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>NVMContactWorld__CW_Call_Start_Time__c</columns>
        <columns>TASK.CALLDURATION</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CALLTYPE</field>
            <operation>equals</operation>
            <value>1,2</value>
        </filters>
        <filters>
            <field>NVMContactWorld__CW_Call_Start_Time__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>My Calls - This Week</label>
    </listViews>
    <listViews>
        <fullName>My_Calls_Today</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>NVMContactWorld__CW_Call_Start_Time__c</columns>
        <columns>TASK.CALLDURATION</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CALLTYPE</field>
            <operation>equals</operation>
            <value>1,2</value>
        </filters>
        <filters>
            <field>NVMContactWorld__CW_Call_Start_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Calls - Today</label>
    </listViews>
    <listViews>
        <fullName>My_Team_Today_s_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.CLOSED</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team Today&apos;s Tasks</label>
        <sharedTo>
            <role>Client_Manager_GMT_Team_A_Leader</role>
            <role>Client_Manager_Team_A_Leader</role>
            <role>Client_Manager_Team_C_Leader</role>
            <role>Client_Resolution_Manager_Team_A</role>
            <role>Client_Resolution_Manager_Team_C</role>
            <role>SLXAusClientOperationsManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>contains</operation>
            <value>Rebacca</value>
        </filters>
        <label>Grace Tasks</label>
        <sharedTo>
            <roleAndSubordinates>BJBGlobalAccountsAdmin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tracey_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>contains</operation>
            <value>Tracey</value>
        </filters>
        <label>Tracey Tasks</label>
        <sharedTo>
            <role>BJBGlobalAccountsAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>activities__Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>equals</operation>
            <value>Please change the subject</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>contains</operation>
            <value>Grace,Tracy</value>
        </filters>
        <label>Shared Tasks View</label>
        <sharedTo>
            <role>BJBGlobalAccountsAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>activities__Today_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Today + Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__Tomorrow_s_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tomorrow&apos;s Tasks</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>